syntax = "proto3";

package proto;

// 定义发送请求信息
message SimpleRequest{
  // 参数类型 参数名称 标识号
  string data = 1;
}

// 定义流式响应信息
message StreamResponse{
  int32 code = 1;
  string value = 2;
}

// 定义我们的服务(可以定义多个服务，每个服务可以定义多个接口)
service StreamService{
  // 服务端流式RPC，需要在响应数据前加stream
  rpc List(SimpleRequest) returns (stream StreamResponse){};
}